<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/app_background"
    tools:context=".MainActivity">
    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:fontFamily="sans-serif-black"
        android:background="@drawable/title_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:text="@string/n"
        android:textColor="@color/purple_700"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="monospace"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:lineHeight="36sp" />

    <EditText
        android:id="@+id/n"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:textSize="22sp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:background="@drawable/score_background"
        android:padding="10dp"
        android:focusable="true"
        android:textColorHint="@color/white"
        android:hint="size" />

        <Button
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="bold"
            android:padding="10dp"
            android:id="@+id/enter"
            android:layout_gravity="center"
            android:text="enter"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:text="@string/num1"
        android:textColor="@color/purple_700"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input"
        app:lineHeight="36sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
    <EditText
        android:id="@+id/n1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:background="@drawable/score_background"
        android:padding="10dp"
        android:focusable="true"
        android:textColorHint="@color/white"
        android:hint="0 - 255" />
        <Button
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="bold"
            android:padding="10dp"
            android:id="@+id/add_1"
            android:layout_gravity="center"
            android:text="Add"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:text="@string/num2"
        android:textColor="@color/purple_700"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:lineHeight="36sp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
    <EditText
        android:id="@+id/n2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:background="@drawable/score_background"
        android:padding="10dp"
        android:focusable="true"
        android:textColorHint="@color/white"
        android:hint="0 - 255"/>
    <Button
        android:layout_marginLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textStyle="bold"
        android:padding="10dp"
        android:id="@+id/add_2"
        android:layout_gravity="center"
        android:text="Add"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:text="@string/a1"
        android:textColor="@color/purple_700"
        android:textSize="22sp"
        android:textStyle="bold"
        android:fontFamily="monospace"
        android:layout_marginTop="5dp"
        app:lineHeight="36sp" />
        <TextView
            android:id="@+id/disp_1"
            android:hint="arr elements"
            android:textAlignment="center"
            style="@style/OptionStyle"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:text="@string/a2"
            android:textColor="@color/purple_700"
            android:textSize="21sp"
            android:textStyle="bold"
            android:fontFamily="monospace"
            android:layout_marginTop="5dp"
            app:lineHeight="36sp" />


    <TextView
        android:id="@+id/disp_2"
        android:layout_marginLeft="10dp"
        android:hint="arr elements"
        android:textAlignment="center"
        style="@style/OptionStyle"
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="1dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="255dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="monospace"
            android:padding="10sp"
            android:text="@string/normalized"
            android:textColor="@color/purple_700"
            android:textSize="20sp"
            android:textStyle="bold"
            app:lineHeight="36sp" />

        <TextView
            android:id="@+id/sf"
            style="@style/OptionStyle"
            android:layout_width="98dp"
            android:textAlignment="center"
            android:hint="sf"
            android:layout_gravity="center" />


    </LinearLayout>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:id="@+id/disp"
        android:hint="arr elements"
        android:textAlignment="center"
        style="@style/OptionStyle"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="1dp"
        android:orientation="horizontal">
    <Button
        android:layout_marginLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textStyle="bold"
        android:padding="10dp"
        android:layout_gravity="center"
        android:id="@+id/compute"
        android:text="compute"/>

        <Button
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="bold"
            android:padding="10dp"
            android:layout_gravity="center"
            android:id="@+id/clear"
            android:text="clear"/>

    </LinearLayout>
</LinearLayout>




